# DreamCoder

./: .git-blame-ignore-revs  Makefile  dreamcoder.opam  dune-project  requirements.txt
.github/workflows/: main.yml
dreamcoder/: dreamcoder.py  enumeration.py  grammar.py  program.py  recognition.py  task.py  type.py  utilities.py
dreamcoder/domains/list/: listPrimitives.py  main.py
solvers/: FastType.ml  Helmholtz.ml  TikZ.ml  compression.ml  dune  enumerate_with_context.ml  enumerate_with_data.ml  enumeration.ml  grammar.ml  pregex.ml  program.ml  program_with_data.ml  solver.ml  solver_context.ml  solver_data.ml  task.ml  task_with_data.ml  tower.ml  type.ml  utils.ml  versionDemo.ml  versions.ml
solvers/geomLib/: dune
solvers/logoLib/: dune
tests/: test_grammar.py
